deployment/trino/kustomize/base/deployment-manifest/sso/deployment-trino-coordinator.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: trino-coordinator
  labels:
    app.kubernetes.io/part-of: trino
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trino
  template:
    metadata:
      labels:
        app: trino
    spec:
      restartPolicy: Always
      serviceAccountName: trino-default
      terminationGracePeriodSeconds: 30
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      containers:
        - resources: {}
          terminationMessagePath: /dev/termination-log
          name: trino
          ports:
            - containerPort: 8080
              protocol: TCP
          imagePullPolicy: Always
          volumeMounts:
            - name: config-volume
              mountPath: /etc/trino
            - name: catalog-volume
              mountPath: /etc/trino/catalog
            - name: schemas-volume
              mountPath: /etc/trino/schemas
            # - name: truststore-volume
            #   mountPath: /etc/trino/truststore
            - name: keystore-volume
              mountPath: /etc/trino/keystore
            - name: keystore-p12-volume
              mountPath: /etc/trino/keystore-p12
          terminationMessagePolicy: File
          # image: trinodb/trino
          image: 'quay.io/osclimate/trino'
      serviceAccount: trino-default
      volumes:
        - name: config-volume
          configMap:
            name: trino-configs
            defaultMode: 420
        - name: catalog-volume
          configMap:
            name: trino-catalog
            defaultMode: 420
        - name: schemas-volume
          configMap:
            name: schemas-volume-coordinator
            defaultMode: 420
        # - name: truststore-volume
        #   secret:
        #     secretName: truststore
        #     items:
        #       - key: truststore.jks
        #         path: truststore.jks
        #     defaultMode: 420
        - name: keystore-volume
          secret:
            secretName: keystore
            items:
              - key: keystore.jks
                path: keystore.jks
            defaultMode: 420
        - name: keystore-p12-volume
          secret:
            secretName: keystore-p12
            items:
              - key: trino.p12
                path: trino.p12
            defaultMode: 420
      dnsPolicy: ClusterFirst
  strategy:
    type: Recreate
