deployment/trino/kustomize/base/deployment-manifest/sso/deployment-trino-worker.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: trino-worker
  labels:
    app: trino-worker
    app.kubernetes.io/part-of: trino
spec:
  replicas: 2
  selector:
    matchLabels:
      app: trino-worker
  template:
    metadata:
      labels:
        app: trino-worker
      annotations:
        openshift.openshift.io/restartedAt: '2024-03-06T18:49:33.931Z'
    spec:
      restartPolicy: Always
      serviceAccountName: trino-default
      # imagePullSecrets:
      #   - name: registry-credentials
      # schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
      containers:
        - resources: {}
          readinessProbe:
            httpGet:
              path: /v1/info
              port: http
              scheme: HTTP
            initialDelaySeconds: 20
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 6
          terminationMessagePath: /dev/termination-log
          name: trino-worker
          livenessProbe:
            httpGet:
              path: /v1/info
              port: http
              scheme: HTTP
            initialDelaySeconds: 20
            timeoutSeconds: 5
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 6
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          imagePullPolicy: Always
          volumeMounts:
            - name: config-volume
              mountPath: /etc/trino
            - name: catalog-volume
              mountPath: /etc/trino/catalog
            - name: schemas-volume
              mountPath: /etc/trino/schemas
            # - name: truststore-volume
            #   mountPath: /etc/trino/truststore
          terminationMessagePolicy: File
          # image: trinodb/trino
          image: 'quay.io/osclimate/trino'
      serviceAccount: trino-default
      volumes:
        - name: config-volume
          configMap:
            name: trino-worker
            defaultMode: 420
        - name: catalog-volume
          configMap:
            name: trino-catalog
            defaultMode: 420
        - name: schemas-volume
          configMap:
            name: schemas-volume-worker
            defaultMode: 420
        # - name: truststore-volume
        #   secret:
        #     secretName: truststore
        #     items:
        #       - key: truststore.jks
        #         path: truststore.jks
            # defaultMode: 420
      dnsPolicy: ClusterFirst
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
