deployment/trino/kustomize/base/deployment-manifest/sso/service-trino-coordinator.yaml
kind: Service
apiVersion: v1
metadata:
  name: trino
  labels:
    app: trino
spec:
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
    - name: https
      protocol: TCP
      port: 8443
      targetPort: 8443
  internalTrafficPolicy: Cluster
  type: ClusterIP
  selector:
    app: trino
