deployment/trino/kustomize/base/deployment-manifest/sso/route-trino-coordinator.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: trino
spec:
  path: /
  to:
    kind: Service
    name: trino
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    certificate: |-
      -----BEGIN CERTIFICATE-----
      MIIBnDCCAUGgAwIBAgIRAKU97OY1a3hIetfg+9JCfhYwCgYIKoZIzj0EAwIwLTEr
[...]
      92UnKFsixOxpno4xykiivS5V6AxUhPB/8/hvRwZUynQ=
      -----END CERTIFICATE-----
    key: |-
      -----BEGIN EC PRIVATE KEY-----
      MHcCAQEEII+DKETlB5+JvXb66Af9oEJFxD98/AusLqO7lbpUAA7ZoAoGCCqGSM49
[...]
      idGFxiPt9jStPaRpYz96Cm6z1oHC5+JGOg==
      -----END EC PRIVATE KEY-----
    caCertificate: |-
      -----BEGIN CERTIFICATE-----
      MIIBnDCCAUGgAwIBAgIRAKU97OY1a3hIetfg+9JCfhYwCgYIKoZIzj0EAwIwLTEr
[...]
      92UnKFsixOxpno4xykiivS5V6AxUhPB/8/hvRwZUynQ=
      -----END CERTIFICATE-----
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
